@startuml

title __WEEK8-WEEK8_13.RICHFIRSTPOORLAST's Class Diagram__\n

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Person {
    }
  }
  

  package  {
    class Person {
    }
  }
  

  Person -up-|> Comparable
  Person -up-|> Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
